Closed Bug 1576787 Opened 5 years ago Closed 5 years ago

js/xpconnect/tests/mochitest/test_bug870423.html fails with fission

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Fission Milestone M4
Tracking Status
firefox71 --- fixed

People

(Reporter: pbone, Assigned: pbone)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Attachment #9088334 - Attachment description: Bug 1576787 - Handle RemoteObjectProxyies in instanceof r=mccr8 → Bug 1576787 - Handle RemoteObjectProxies in instanceof r=mccr8
Pushed by pbone@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8624f80646ce
Handle RemoteObjectProxies in instanceof r=bzbarsky
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Fission Milestone: --- → M4
Priority: -- → P2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: