Bug 1576787 - Handle RemoteObjectProxies in instanceof r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D43559